fix: adjust labels' contrast for accessibility

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -62,3 +62,9 @@ md-whiteframe img {
 
 
 }
+
+
+/* ACCESSIBILITY: CONTRAST */
+md-input-container label{
+    color: rgb(115, 115, 115);
+}
